<resources>
    <string name="app_name">Zoomx</string>
    <string name="menu_action_delete_all">Delete All</string>
    <string name="request_details_general">General</string>
    <string name="request_details_method">Method</string>
    <string name="request_details_date">Date</string>
    <string name="request_details_code">Code</string>
    <string name="request_details_url">URL</string>
    <string name="request_details_response">Response</string>
    <string name="request_details_request">Request</string>
    <string name="request_headers">Request Headers</string>
    <string name="response_headers">Response Headers</string>
    <string name="setting_network_tracker_switch">Network Tracking</string>
    <string name="setting_menu_showing_on_start_switch">Show menu on start</string>
    <string name="search">Search</string>
    <string name="request_error_code_text">Error</string>
    <string name="menu_item_share_request">share request</string>
    <string name="share_file_chooser_title">Share File</string>
    <string name="request_details_screen_title">Request Details</string>
    <string name="json_viewer_screen_title">JSON Viewer</string>
    <string name="request_screen_title">Request</string>
    <string name="setting_screen_title">Settings</string>
    <string name="screen_shot_title">Screenshot</string>
    <string name="info_screen_title">App Info</string>

    <string name="info_app_section_title">Application info</string>
    <string name="info_package_name">Package name</string>
    <string name="info_version_code">Version Code</string>
    <string name="info_version_name">Version name</string>
    <string name="info_device_model">Device model</string>
    <string name="info_device_density">Density</string>
    <string name="info_device_section_title">Device info</string>
    <string name="info_device_resolution">Device resolution</string>
    <string name="info_release">Release</string>
    <string name="info_api">API</string>

    <string name="info_settings_section_title">Settings</string>
    <string name="info_clear_app_data">Clear app data</string>
    <string name="info_uninstall">Uninstall</string>
    <string name="zoomx_ui_options_hint">Choose the way you want to access Network logs</string>
    <string name="zoomx_ui_options_title">Zoomx UI</string>
    <string name="zoomx_ui_option_notification">Notification</string>
    <string name="zoomx_ui_options_draw_over_app">Draw over app</string>
    <string name="zoomx_ui_chooser">Choose how to access Zoomx</string>
    <string name="channel_name">zoomx_notification_channel</string>
    <string name="channel_description">zoomx notification</string>
    <string name="clear_logs">Clear</string>
</resources>
